# showinfilemanager

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  RELEASE_NOTES.md  main.py  mypy.ini  pyproject.toml  setup.cfg  setup.py  showinfilemanager.py
debian/: control  copyright
doc/: showinfilemanager.1.md
src/: cli.py  rundoctest.py
src/showinfilemanager/: __about__.py  constants.py  linux.py  showinfilemanager.py
src/showinfm/: __about__.py  __init__.py  argumentsparse.py  constants.py  filemanager.py  mypy.ini  showinfm.py
src/showinfm/system/: __init__.py  linux.py  tools.py  urivalidate.py  windows.py
