[build-system]
requires = ["hatchling", "hatch-argparse-manpage"]
build-backend = "hatchling.build"

[project]
name = "show-in-file-manager"
authors = [{ name = "Damon Lynch", email = "damonlynch@gmail.com" }]
description = "Open the system file manager and select files in it"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Desktop Environment :: File Managers",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "pyxdg>=0.25; platform_system=='Linux'",
    "packaging",
    "pywin32>=301; platform_system=='Windows'",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/damonlynch/showinfilemanager"
Issues = "https://github.com/damonlynch/showinfilemanager/issues"

[project.scripts]
showinfilemanager = "showinfm.showinfm:main"

[tool.hatch.version]
path = "src/showinfm/__about__.py"

[tool.hatch.build.targets.sdist]
packages = ["src/showinfm"]

[tool.hatch.build.targets.wheel]
packages = ["src/showinfm"]

[tool.hatch.build.hooks.argparse-manpage]
include-url = false
manpages = [
    "man/showinfilemanager.1:function=get_parser:pyfile=src/showinfm/argumentsparse.py:manual_title=General Commands Manual",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "urivalidate.py",
]
# Same as Black.
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
