[metadata]
name = show-in-file-manager
version =  1.1.4
author = Damon Lynch
author_email = damonlynch@gmail.com
description = Open the system file manager and select files in it
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/damonlynch/showinfilemanager
project_urls =
    Bug Tracker = https://github.com/damonlynch/showinfilemanager/issues
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows :: Windows 10
    Operating System :: POSIX :: Linux
    Development Status :: 5 - Production/Stable
    Topic :: Desktop Environment :: File Managers
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pyxdg>=0.25; platform_system=='Linux'
    packaging
    pywin32>=301; platform_system=='Windows'
    importlib_metadata; python_version < '3.8'
pandoc_files =
    showinfilemanager.1.md
[options.entry_points]
console_scripts =
    showinfilemanager = showinfm.showinfm:main

[options.packages.find]
where = src
